<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JxVideo</string>
    <string name="preferences">设置</string>
    <string name="gatewayPrefTitle">目标服务器地址</string>
    <string name="gatewayPrefDesc">设置视频发送的目标服务器地址</string>
    <string name="bitrate">码率</string>
    <string name="frameRate">帧率</string>
    <string name="gop">GOP</string>
    <string name="errorToConnectHost">无法连接至</string>
    <string name="close">关闭</string>
    <string name="videoOn">开视频</string>
    <string name="videoOff">关视频</string>
    <string name="audioOn">开语音</string>
    <string name="audioOff">关语音</string>
    <string name="encodeRef">编码设置</string>
    <string name="audioDecoder">音频解码</string>
    <string name="regNo">注册码</string>
    <string name="showUUID">显示UUID</string>
    <string name="confirmExit">确定要退出程序?</string>
    <string name="sure">确定</string>
    <string name="back">返回</string>
    <string-array name="audioDecoderArray">
        <item>G.711</item>
        <item>MPEG-2</item>
    </string-array>
    <string-array name="audioDecoderValueArray">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="bitrateArray">
        <item>128</item>
        <item>256</item>
        <item>300</item>
        <item>320</item>
        <item>384</item>
        <item>500</item>
        <item>600</item>
        <item>800</item>
    </string-array>
    <string-array name="frArray">
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
    <string-array name="gopArray">
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>
</resources>
