<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:key="gateway"
            android:title="@string/gatewayPrefTitle"/>
    <ListPreference
            android:key="bitrate"
            android:title="@string/bitrate"
            android:defaultValue="300"
            android:entries="@array/bitrateArray"
            android:entryValues="@array/bitrateArray"/>
    <ListPreference
            android:key="framerate"
            android:title="@string/frameRate"
            android:defaultValue="8"
            android:entries="@array/frArray"
            android:entryValues="@array/frArray"/>
    <ListPreference
            android:key="gop"
            android:title="@string/gop"
            android:defaultValue="50"
            android:entries="@array/gopArray"
            android:entryValues="@array/gopArray"/>
    <ListPreference
            android:key="audioDecoder"
            android:title="@string/audioDecoder"
            android:defaultValue="1"
            android:entries="@array/audioDecoderArray"
            android:entryValues="@array/audioDecoderValueArray"/>
</PreferenceScreen>